syntax="proto3";
package primenumber;
option go_package="primenumberpb";

message PrimeNumberRequest {
    int32 num = 1;
}

message PrimeNumberResponse {
    int32 result = 1;
}

service PrimeNumberService {
    // server streaming
    rpc PrimeNumberDecomposition (PrimeNumberRequest) returns (stream PrimeNumberResponse){};
}